# hmpfr

./: .gitignore  ChangeLog  LICENSE  README  README.md  dict.txt  hmpfr.cabal  stack.yaml
cbits/: chsmpfr.c  chsmpfr.h
demo/: Demo.hs
src/Data/Number/: MPFR.hs
src/Data/Number/MPFR/: Arithmetic.hs  Assignment.hs  Comparison.hs  Conversion.hs  FFIhelper.hsc  Integer.hs  Internal.hs  Misc.hs  Mutable.hs  Special.hs
src/Data/Number/MPFR/Instances/: Down.hs  Near.hs  Up.hs  Zero.hs
src/Data/Number/MPFR/Mutable/: Arithmetic.hs  Integer.hs  Internal.hs  Misc.hs  Special.hs
