name:                hmpfr
version:             0.3.3
synopsis:            Haskell binding to the MPFR library
description:         Haskell binding to the MPFR library. This version is compatible
                     with MPFR 2.4.* and later and will not work with previous releases
                     of the MPFR library.
                     .
                     /Since MPFR uses GMP, this library does not work correctly/
                     /with a ghc < TODO that has been compiled with integer-gmp./  
                     /When using ghc < TODO, this library will require that the ghc/
                     /is compiled  with integer-simple instead of integer-gmp./
                     .
                     The library includes a mutable interface
                     in addition to the pure one. These functions should have a
                     lot less overhead than the pure ones.
                     .
                     Some simple examples of usage can be found in demo/Demo.hs.
category:            Data, Math
license:             BSD3
license-file:        LICENSE
Stability:           experimental
tested-with:         GHC == 7.2.1-mygmp
author:              Aleš Bizjak, Michal Konečný
maintainer:          Michal Konečný <mikkonecny@gmail.com>
Homepage:            http://code.google.com/p/hmpfr/

build-type:          Simple
cabal-version:       >= 1.2
Extra-source-files:  demo/Demo.hs

Data-files:          README
                     dict.txt
                     ChangeLog

Library
  build-Depends:       base > 3 && < 5
  if impl(ghc < 7.2.1)
--  if impl(ghc < 0)
-- TODO: set the version above
     build-Depends:    integer-simple
     cpp-options: -DINTEGER_SIMPLE
  else
     build-Depends:    integer-gmp
     cpp-options: -DINTEGER_GMP

  Other-modules:       Data.Number.MPFR.FFIhelper
                       Data.Number.MPFR.Internal
                       Data.Number.MPFR.Mutable.Internal

                       Data.Number.MPFR.Mutable.Arithmetic
                       Data.Number.MPFR.Mutable.Special
                       Data.Number.MPFR.Mutable.Integer
                       Data.Number.MPFR.Mutable.Misc
                       
                       Data.Number.MPFR.Assignment
                       Data.Number.MPFR.Conversion
                       Data.Number.MPFR.Arithmetic
                       Data.Number.MPFR.Comparison
                       Data.Number.MPFR.Special
                       Data.Number.MPFR.Integer
                       Data.Number.MPFR.Misc

  Exposed-modules:     Data.Number.MPFR.Instances.Near
                       Data.Number.MPFR.Instances.Up
                       Data.Number.MPFR.Instances.Down
                       Data.Number.MPFR.Instances.Zero

                       Data.Number.MPFR

                       Data.Number.MPFR.Mutable
                       
  build-tools:         hsc2hs
  GHC-options:         -Wall -fno-warn-orphans -O2
  GHC-prof-options:    -prof -auto
  hs-source-dirs:      src
  include-dirs:        cbits
  includes:            mpfr.h
  install-includes:    chsmpfr.h
  c-sources:           cbits/chsmpfr.c

  extra-libraries:     mpfr

